--- a/Skyjoo/Skyjoo.csproj
+++ b/Skyjoo/Skyjoo.csproj
@@ -76,14 +76,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\ClientActivity.cs" />
-    <Compile Include="Activities\Dependency.cs" />
+    <Compile Include="Dependency\Dependency.cs" />
     <Compile Include="Activities\GameActivity.cs" />
     <Compile Include="Activities\MainActivity.cs" />
     <Compile Include="Activities\ServerActivity.cs" />
-    <Compile Include="Activities\StorageHandler.cs" />
+    <Compile Include="Storage\StorageHandler.cs" />
     <Compile Include="GameLogic\FieldUpdateEventArgs.cs" />
-    <Compile Include="GameLogic\Images\ImageHandler.cs" />
-    <Compile Include="GameLogic\Images\ImageMapping.cs" />
+    <Compile Include="Images\ImageHandler.cs" />
+    <Compile Include="Images\ImageMapping.cs" />
     <Compile Include="GameLogic\ReverseSkyjoCardStack.cs" />
     <Compile Include="GameLogic\SkyjoBoard.ClickHandler.cs" />
     <Compile Include="GameLogic\SkyjoBoard.EventHandlers.cs" />
@@ -302,6 +302,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\beer_IconM2.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="..\NetworkCommunication.Core\NetworkCommunication.Core.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
